@@ -12,8 +12,12 @@ dctrl-tools (2.19) UNRELEASED; urgency=low
     Closes: #525525 (do not separate stanzas with empty lines when showing
                      Description field only)
     [Reported by Stefano Zacchiroli <zack@debian.org>]
+  * lib/paragraph.[ch], grep-dctrl/grep-dctrl.c: Use the actual spelling of
+    field names in output, instead of the command line spelling.
+    Closes: #209134 (keyword case shouldn't be influenced by -s)
+    Reported by Dan Jacobson <jidanni@jidanni.org>.
 
- -- Antti-Juhani Kaijanaho <ajk@debian.org>  Thu, 28 Jul 2011 12:45:01 +0300
+ -- Antti-Juhani Kaijanaho <ajk@debian.org>  Thu, 28 Jul 2011 13:24:12 +0300
 
 dctrl-tools (2.18ubuntu1) oneiric; urgency=low
 
